--- a/1 CSS Projects/Animated Cards/index.html
+++ b/1 CSS Projects/Animated Cards/index.html
@@ -15,7 +15,7 @@
     <div class="card-grid">
         <div class="card">
             <div class="card-header card-image"><img src="https://source.unsplash.com/wwqZ8CM21gg"/></div>
-            <div class="card-body"><h4>123 Fake Street </h4>"Charming Family Home with Modern Upgrades"
+            <div class="card-body"><h3>123 Fake Street </h3><h4>"Charming Family Home with Modern Upgrades"</h4>
                 Description: "Discover the perfect family retreat in this spacious home boasting contemporary updates throughout. Enjoy quality family time in the generous living spaces and unwind in the serene ambiance of this beautifully renovated property."</div>
             <div class="card-footer">
                 <button class="btn">Details</button>
@@ -24,7 +24,7 @@
         </div>
         <div class="card card-shadow"> 
             <div class="card-header card-image"><img src="https://source.unsplash.com/mR1CIDduGLc"/></div>
-            <div class="card-body"><h4>2560 Anderson Way</h4>"Private Family Home Surrounded by Nature"
+            <div class="card-body"><h3>2560 Anderson Way</h3><h4>"Private Family Home Surrounded by Nature"</h4>
                 Description: "Escape to your private sanctuary nestled amidst lush greenery and tranquility. This single-family home offers a peaceful retreat with ample space, natural light, and a serene environment perfect for relaxation and rejuvenation."</div>
             <div class="card-footer">
                 <button class="btn">Details</button>
@@ -35,7 +35,7 @@
             <div class="card-header card-image">
                 <img src="https://source.unsplash.com/2d4lAQAlbDA"/>
             </div>
-            <div class="card-body"><h4>3490 Sunshine Boulevard</h4>"Luxurious Condo in Prime Location"
+            <div class="card-body"><h3>3490 Sunshine Boulevard</h3><h4>"Luxurious Condo in Prime Location"</h4>
                 Description: "Step into modern elegance with this stunning condo nestled in the vibrant Pearl District. Embrace city living at its finest with spacious interiors and panoramic views. Ideal for urban enthusiasts seeking a sophisticated lifestyle."</div>
             <div class="card-footer">
                 <button class="btn">Details</button>
@@ -44,8 +44,8 @@
         </div>
         <div class="card card-shadow"> 
             <div class="card-header card-image"><img src="https://source.unsplash.com/GGupkreKwxA"/></div>
-            <div class="card-body"><h4>5674 Junkyville Road</h4>"Rare Gem: Bright Bungalow in Desirable Location"
-                Description: "Experience the allure of this rare gem, a bright and spacious bungalow located in the sought-after Sycamore Park neighborhood. Immerse yourself in a cozy retreat that combines charm, comfort, and convenience."</div>
+            <div class="card-body"><h3>5674 Junkyville Road</h3><h4>"Rare Gem: Bright Bungalow in Desirable Location"</h4>
+                Description: "Experience the allure of this rare gem, a bright and spacious bungalow located in the sought-after Sycamore Park neighborhood. Immerse yourself in a cozy retreat that combines charm, comfort, and convenience. You won't want anything else!"</div>
             <div class="card-footer">
                 <button class="btn">Details</button>
                 <button class="btn btn-outline">Contact Seller</button>
