--- a/1 CSS Projects/3d flip button/index.html
+++ b/1 CSS Projects/3d flip button/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="btn">
         <div class="side default-side">Hover Me</div>
-        <div class="side hover-side">Surprise Bitch!</div>
+        <div class="side hover-side">Surprise!</div>
     </div>
 </body>
 </html>
