--- a/1 CSS Projects/CSS Only Tool Tips/index.html
+++ b/1 CSS Projects/CSS Only Tool Tips/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Tool Tips</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="avatar" data-tooltip="Thinking Cat"></div>
 </body>
 </html>
