--- a/1 CSS Projects/Advanced Text Animation/index.html
+++ b/1 CSS Projects/Advanced Text Animation/index.html
@@ -9,7 +9,7 @@
 <body> 
     <ul class="list">
      <li class="list-item"> 
-        <span class="text" data-text="HOME">HOME</span>
+        <span class="split-text" data-text="HOME">HOME</span>
     </li>
      <li class="list-item" data-text="ABOUT">ABOUT</li>
      <li class="list-item" data-text="WORK">WORK</li>
