--- a/1 CSS Projects/Advanced Text Animation/index.html
+++ b/1 CSS Projects/Advanced Text Animation/index.html
@@ -11,9 +11,15 @@
      <li class="list-item"> 
         <span class="split-text" data-text="HOME">HOME</span>
     </li>
-     <li class="list-item" data-text="ABOUT">ABOUT</li>
-     <li class="list-item" data-text="WORK">WORK</li>
-     <li class="list-item" data-text="CONTACT">CONTACT</li>
+     <li class="list-item" data-text="ABOUT">
+        <span class="split-text" data-text="ABOUT">ABOUT</span>
+    </li>
+     <li class="list-item" data-text="WORK">
+        <span class="split-text" data-text="WORK">WORK</span>
+     </li>
+     <li class="list-item" data-text="CONTACT">
+        <span class="split-text" data-text="CONTACT">CONTACT</span>
+     </li>
     </ul>
 </body>
 </html>
