--- a/1 CSS Projects/CSS Image Hover Effect/index.html
+++ b/1 CSS Projects/CSS Image Hover Effect/index.html
@@ -28,6 +28,33 @@
             adipisicing elit. Temporibus cum.</div>
         </div>
     </div>
-
+    <div class="grid">
+        <div class="img-wrapper">
+            <img src="https://picsum.photos/500?random=4">
+            <div class="content slide-right">Lorem ipsum dolor sit amet consectetur, 
+            adipisicing elit. Temporibus cum.</div>
+        </div>
+    </div>
+    <div class="grid">
+        <div class="img-wrapper">
+            <img src="https://picsum.photos/500?random=5">
+            <div class="content slide-up">Lorem ipsum dolor sit amet consectetur, 
+            adipisicing elit. Temporibus cum.</div>
+        </div>
+    </div>
+    <div class="grid">
+        <div class="img-wrapper">
+            <img src="https://picsum.photos/500?random=6">
+            <div class="content slide-down">Lorem ipsum dolor sit amet consectetur, 
+            adipisicing elit. Temporibus cum.</div>
+        </div>
+    </div>
+    <div class="grid">
+        <div class="img-wrapper">
+            <img src="https://picsum.photos/500?random=7">
+            <div class="gray">Lorem ipsum dolor sit amet consectetur, 
+            adipisicing elit. Temporibus cum.</div>
+        </div>
+    </div>
 </body>
 </html>
