--- a/1 CSS Projects/CSS Image Hover Effect/index.html
+++ b/1 CSS Projects/CSS Image Hover Effect/index.html
@@ -51,9 +51,9 @@
     </div>
     <div class="grid">
         <div class="img-wrapper">
-            <img src="https://picsum.photos/500?random=7">
-            <div class="gray">Lorem ipsum dolor sit amet consectetur, 
-            adipisicing elit. Temporibus cum.</div>
+            <img class="gray" src="https://picsum.photos/500?random=7">
+            <!-- <div class="gray">Lorem ipsum dolor sit amet consectetur, 
+            adipisicing elit. Temporibus cum.</div> -->
         </div>
     </div>
 </body>
